--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,6 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+    <!-- Tambahkan kode snippet Maze di sini -->
+    <script>
+      (function(w, d) {
+        var s, t;
+        var scriptElement = d.createElement('script');
+        scriptElement.src = 'https://cdn.maze.co/maze.js';
+        scriptElement.async = true;
+        
+        s = d.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(scriptElement, s);
+        
+        t = d.createElement('noscript');
+        t.innerHTML = '<img src="https://cdn.maze.co/track.gif" />';
+        d.getElementsByTagName('body')[0].appendChild(t);
+      })(window, document);
+    </script>
   </head>
   <body>
     <div id="root"></div>
